[package]
name = "estranged-api"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
estranged-types.workspace = true

bytes.workspace = true
futures-util.workspace = true
genawaiter-try-stream.workspace = true
governor.workspace = true
itertools.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
clap.workspace = true
dotenvy.workspace = true
tokio = { workspace = true, features = ["full"] }
