[package]
name = "estranged-headers"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
estranged-types.workspace = true

headers.workspace = true
http.workspace = true
itertools.workspace = true
tracing.workspace = true
